--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
+<!--
+    「前端项目」首页
+    重构起始时间：2020-2-29
+    完成时间：待定
+    ——冰凌代工
+-->
 <DOCTYPE html>
     <html>
         <head>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <style>
-                h1{
-                    font-size: 50px;
-                    text-align: center;
-                }
-            </style>
-            <title>404</title>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+            <link rel="stylesheet" type="text/css" href="css/style.css">
+            <script src="/js/main.js"></script>
+            <meta charset="utf-8" />
+            <title>黑水新墙|首页</title>
         </head>
         <body>
-            <h1>404</h1>
+            <div class="top">
+                <h1>黑水</h1>
+            </div>
+            <div class="content">
+                <h1>建设中...</h1>
+                <p class="center_p">技术支持:E.H.D 冰凌</p>
+            </div>
         </body>
     </html>
