--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="头部">
             <h1>黑水墙</h1>
-            <p>新概念设计</p>
+            <p>站长已更换</p>
         </div>
         <div class="导航">
             <a href="index.html">首页</a>
@@ -22,9 +22,6 @@
             <div class="侧边栏">
                 <h2 class="中央标题">欢迎光临黑水墙</h2>
                 <p class="普通文字">陈宇欣道歉鬼畜视频创作，<a href="陈宇欣鬼畜视频.html">点击观看</a></p>
-                <h2 class="中央标题">关于本站新概念设计</h2>
-                <p class="普通文字">由于死妈废物词条过多，为优化性能而进行的简约化设计。</a></p>
-                <img class="img_居中" src="Cache_56c9ae4c2043ece3..jpg">
             </div>
             <div class="内容">
                 <h2 class="中央标题">年度杀手</h2>
