高新乐你妈死了

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="侧边栏">
                 <h2 class="中央标题">欢迎光临黑水墙</h2>
                 <p class="普通文字">陈宇欣道歉鬼畜视频创作，<a href="陈宇欣鬼畜视频.html">点击观看</a></p>
+                <p>本站经过一段复杂的过程，现已恢复。</p>
             </div>
             <div class="内容">
                 <h2 class="中央标题">年度杀手</h2>
