--- a/stars.html
+++ b/stars.html
@@ -77,7 +77,7 @@
                                 <li><p class="表格文字"><a href="stars/丁学昌.html">丁学昌</a></p></li>
                                 <li><p class="表格文字"><a href="stars/吴皓阳.html">吴皓阳 √</a></li>
                                 <li><p class="表格文字"><a href="stars/张明春.html">张明春 √</a></li>
-                                <li><p class="表格文字"><a href="stars/王德明.html">王德明</a></p></li>
+                                <li><p class="表格文字"><a href="stars/高新乐.html">高新乐</a></p></li>
                                 </ul>
                         </div>
                     </div>
