高新乐你妈死了

--- a/stars.html
+++ b/stars.html
@@ -31,6 +31,7 @@
                                 <li><p class="表格文字"><a href="stars/杨可诚.html">三号 杨可诚</a></p></li>
                                 <li><p class="表格文字"><a href="stars/李可欣.html">四号 李可欣</a></p></li>
                                 <li><p class="表格文字"><a href="stars/郑志业.html">五号 郑志业 √</a></p></li>
+                                <li><p class="表格文字"><a href="stars/高新乐.html">六号 高新乐</a></p></li>
                             </ul>
                         </div>
                     </div>
@@ -70,14 +71,13 @@
                         <div class="菜单项_弱智">
                             <ul class="列表">
                                 <li><p class="表格文字"><a href="stars/胥凯为.html">胥凯为 √</a></p></li>
-                                <li><p class="表格文字"><a href="stars/黄杰克.html">黄杰克</a></p></li>
+                                <li><p class="表格文字"><a href="stars/空位.html">空位</a></p></li>
                                 <li><p class="表格文字"><a href="stars/王一雪.html">王一雪 √</a></p></li>
                                 <li><p class="表格文字"><a href="stars/丁南.html">丁南</a></p></li>
                                 <li><p class="表格文字"><a href="stars/于子尧.html">于子尧 √</a></p></li>
                                 <li><p class="表格文字"><a href="stars/丁学昌.html">丁学昌</a></p></li>
                                 <li><p class="表格文字"><a href="stars/吴皓阳.html">吴皓阳 √</a></li>
                                 <li><p class="表格文字"><a href="stars/张明春.html">张明春 √</a></li>
-                                <li><p class="表格文字"><a href="stars/高新乐.html">高新乐</a></p></li>
                                 </ul>
                         </div>
                     </div>
