--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="头部">
             <h1>黑水墙</h1>
-            <p>站长已更换</p>
+            <p>现任站长：刘宪冰</p>
         </div>
         <div class="导航">
             <a href="index.html">首页</a>
