--- a/stars.html
+++ b/stars.html
@@ -71,7 +71,7 @@
                         <div class="菜单项_弱智">
                             <ul class="列表">
                                 <!--li><p class="表格文字"><a href="stars/胥凯为.html">胥凯为 √</a></p></li-->
-                                <li><p class="表格文字"><a href="stars/空位.html">空位</a></p></li>
+                                <li><p class="表格文字"><a href="stars/郭铃杰.html">郭铃杰</a></p></li>
                                 <li><p class="表格文字"><a href="stars/王一雪.html">王一雪 √</a></p></li>
                                 <li><p class="表格文字"><a href="stars/丁南.html">丁南</a></p></li>
                                 <li><p class="表格文字"><a href="stars/于子尧.html">于子尧 √</a></p></li>
