编辑词条高新乐

--- a/stars/高新乐.html
+++ b/stars/高新乐.html
@@ -71,6 +71,10 @@
             </table>
         </div>
         <div class="内容">
+            <h3>维基吹逼</h3>
+            <p class="普通文字">高新乐本人已经到本站明星列表评论区大脑降级一般的吹牛逼，请各位<a href="../stars.html">移步至列表区观赏</a></p>
+            <img class="img_居中" src="高新乐吹牛逼.png">
+            <p class="普通文字">以及高新乐可能会在本条目的评论区进行搞笑黑屁，请各位下拉观赏。</p>
             <!-- 来必力City版安装代码 -->
             <div id="lv-container" data-id="city" data-uid="MTAyMC80NjQwNy8yMjkxOA==">
                 <h3>评论</h3>
