更新了张恒

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                 <p class="普通文字"><b style="color: red;">亲妈户籍</b>已开示</p>
                 <p class="普通文字">（<a style="color:blue;" href="stars/陈宇欣.html">阅读全部</a>）</p>
                 <h2 class="中央标题">特别出道</h2>
-                <h3>陈越麒</h3>
-                <img  class="img_左" style="width:100px;" src="./stars/陈越麒.jpg">
+                <h3>张恒</h3>
+                <img  class="img_左" style="width:100px;" src="./stars/张恒玉照.jpg">
                 <br>
-                <p class="普通文字">陈越麒为恶俗狗维基的管理员，多次潜伏于一些恶俗群内，并出道了一些恶俗人士。因为把一般玩网人士扣了恶俗狗帽子而被出道以后，陈越麒发疯了并开始疯狂造谣攻击一些无关人士，例如在恶俗狗维基上迫真出道了黑水组织并疯狂造谣。</p>
-                <p class="普通文字">（<a style="color:blue;" href="stars/陈越麒.html">阅读全部</a>）</p>
+                <p class="普通文字">张恒早年间是三国吧的一个无名小卒，被尊龙引流到抽象圈后做上了皇帝梦。他凭借着能在15分钟内射号的能力对他人进行敲诈勒索，后与王嘉豪合作创建i.5后开始变本加厉的对一些无辜人士进行瞎骂以及射号。</p>
+                <p class="普通文字">（<a style="color:blue;" href="stars/张恒.html">阅读全部</a>）</p>
                 <h2 class="中央标题">创作&画廊</h2>
                 <img class="img_居中" src="./画廊/QQ图片20200122175324.jpg">
                 <br>
