--- a/stars.html
+++ b/stars.html
@@ -46,6 +46,7 @@
                                 <li><p class="表格文字"><a href="stars/庞志杰.html">庞志杰</a></p></li>
                                 <li><p class="表格文字"><a href="stars/陈越麒.html">陈越麒 √</a></p></li>
                                 <li><p class="表格文字"><a href="stars/武晓宇.html">武晓宇</a></p></li>
+                                <li><p class="表格文字"><a href="stars/张恒.html">张恒 √</a></p></li>
                             </ul>
                         </div>
                     </div>
