更新了主页

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h3>张恒</h3>
                 <img  class="img_左" style="width:100px;" src="./stars/张恒玉照.jpg">
                 <br>
-                <p class="普通文字">张恒早年间是三国吧的一个无名小卒，被尊龙引流到抽象圈后做上了皇帝梦。他凭借着能在15分钟内射号的能力对他人进行敲诈勒索，后与王嘉豪合作创建i.5后开始变本加厉的对一些无辜人士进行瞎骂以及射号。</p>
+                <p class="普通文字">张恒早年间是三国吧的一个无名小卒，被尊龙引流到抽象圈后做上了皇帝梦。他凭借着能在15分钟内射号的能力对他人进行敲诈勒索，后与王嘉豪合作创建i.5后开始变本加厉的对一些无辜人士进行瞎骂以及射号，属实是小人得志。</p>
                 <p class="普通文字">（<a style="color:blue;" href="stars/张恒.html">阅读全部</a>）</p>
                 <h2 class="中央标题">创作&画廊</h2>
                 <img class="img_居中" src="./画廊/QQ图片20200122175324.jpg">
