更新了张恒

--- a/stars/张恒.html
+++ b/stars/张恒.html
@@ -64,7 +64,7 @@
 </div>
 <div class="内容">
     <h3>户籍开示</h3>
-<p class="普通文字">满门忠烈:</p>
+<p class="普通文字">全家户籍:</p>
 <img class="img_居中" src="张恒户籍.jpg">
 
 <!-- 来必力City版安装代码 -->
